unpackaged/main/default/objects/Compliance_State_Metadata__c/Compliance_State_Metadata__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A custom setting to store relevant state data for use in Compliance Cases.</description>
    <label>Compliance State Metadata</label>
</CustomObject>