unpackaged/main/default/objects/Compliance_State_Metadata__c/fields/Price_Posting_State__c.field-meta.xml
<CustomField>
    <fullName>Price_Posting_State__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this state is an "Price Posting" State, meaning that the posting date must be recorded manually.</description>
    <inlineHelpText>Indicates that this state's posting date must be entered manually</inlineHelpText>
    <label>Price Posting State</label>
    <type>Checkbox</type>
</CustomField>