unpackaged/main/default/objects/Compliance_State_Metadata__c/fields/State_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>State_Contact_Email__c</fullName>
    <description>Email address of the contact that corresponds with this state.</description>
    <inlineHelpText>Email Address of State Contact</inlineHelpText>
    <label>State Contact Email</label>
    <type>Email</type>
</CustomField>