unpackaged/main/default/objects/Compliance_State_Metadata__c/fields/State_Type__c.field-meta.xml
<CustomField>
    <fullName>State_Type__c</fullName>
    <description>The type of this state. Type indicates which date fields populate automatically and which are entered manually</description>
    <inlineHelpText>Options include: "Prior Approval", "Auto Approval", "Price Posting"</inlineHelpText>
    <label>State Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>